<resources>
    <string name="app_name">GSM_control</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Номер абонента</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Button names -->
    <string name="btn1_name">SET</string>
    <string name="btn2_name">RELE1 on</string>
    <string name="btn3_name">RELE1 off</string>
    <string name="btn5_name">RELE2 on</string>
    <string name="btn6_name">RELE2 off</string>
    <string name="btn4_name">Get info</string>
</resources>